DBC22-6038: Fixed z-index of auth modal to be above header

--- a/src/frontend/src/Modal.scss
+++ b/src/frontend/src/Modal.scss
@@ -1,7 +1,7 @@
 @import "styles/variables";
 
 .shared-modal {
-  z-index: 1000;
+  z-index: 10001;
   position: absolute;
   top: 0;
   bottom: 0;
